--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@babel/preset-react": "^7.0.0",
     "babel-loader": "^8.0.2",
     "babel-plugin-transform-class-properties": "^6.24.1",
+    "css-loader": "^1.0.0",
     "eslint": "^5.5.0",
     "eslint-config-standard": "^12.0.0",
     "eslint-config-standard-react": "^7.0.2",
@@ -31,6 +32,7 @@
     "html-webpack-plugin": "^3.2.0",
     "husky": "^0.14.3",
     "prop-types": "^15.6.2",
+    "style-loader": "^0.23.0",
     "webpack": "^4.17.3",
     "webpack-cli": "^3.1.0",
     "webpack-dev-server": "^3.1.8"
